<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dave.spellchecker.ui.main.MainViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.dave.spellchecker.ui.main.MainActivity">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ad_banner">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_spell_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="top"
                    android:hint="@string/hint_edit_spell"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:minHeight="110dp"
                    android:padding="@dimen/margin_8dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/ll_top_buttons"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ll_top_buttons"
                    tools:text="0/2000자" />

                <LinearLayout
                    android:id="@+id/ll_top_buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_spell_check">

                    <TextView
                        android:id="@+id/tv_remove"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/gray_8"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/remove"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_check"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/gray_8"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/check"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/iv_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/margin_24dp"
                        android:paddingTop="@dimen/margin_16dp"
                        android:paddingEnd="@dimen/margin_24dp"
                        android:paddingBottom="@dimen/margin_16dp"
                        android:src="@drawable/baseline_delete_forever_24"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/iv_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/margin_24dp"
                        android:paddingTop="@dimen/margin_16dp"
                        android:paddingEnd="@dimen/margin_24dp"
                        android:paddingBottom="@dimen/margin_16dp"
                        android:src="@drawable/baseline_search_24"
                        android:visibility="gone" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minHeight="100dp"
                    android:padding="@dimen/margin_8dp"
                    android:scrollbars="vertical"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_top_buttons" />

                <LinearLayout
                    android:id="@+id/ll_result_guide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_result">

                    <TextView
                        android:id="@+id/tv_result_guide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_result"
                        tools:text="맞춤법      표준어의심\n띄어쓰기  통계적교정" />

                    <LinearLayout
                        android:id="@+id/ll_guides"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_8dp">

                        <TextView
                            android:id="@+id/tv_guide_1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="맞춤법"
                            android:textColor="#FC595B" />

                        <TextView
                            android:id="@+id/tv_guide_2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="표준어의심"
                            android:textColor="#B139F4" />

                        <TextView
                            android:id="@+id/tv_guide_3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="띄어쓰기"
                            android:textColor="#1EC545" />

                        <TextView
                            android:id="@+id/tv_guide_4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="통계적교정"
                            android:textColor="#3AACE7" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_bottom_buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_result">

                    <TextView
                        android:id="@+id/tv_share"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/gray_8"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_copy"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/gray_8"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/copy"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/margin_24dp"
                        android:paddingTop="@dimen/margin_16dp"
                        android:paddingEnd="@dimen/margin_24dp"
                        android:paddingBottom="@dimen/margin_16dp"
                        android:src="@drawable/baseline_share_24"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/iv_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="@dimen/margin_24dp"
                        android:paddingTop="@dimen/margin_16dp"
                        android:paddingEnd="@dimen/margin_24dp"
                        android:paddingBottom="@dimen/margin_16dp"
                        android:src="@drawable/baseline_content_copy_24"
                        android:visibility="gone" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            app:isGone="@{!viewModel.isLoading}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <RelativeLayout
            android:id="@+id/ad_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</layout>


