<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dave.spellchecker.ui.payment.PaymentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.dave.spellchecker.ui.view.ShimmerTextView
            android:id="@+id/shimmer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="VIP"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16dp"
            android:src="@drawable/baseline_white_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_16dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_pay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_check_24"
                    android:drawablePadding="@dimen/margin_12dp"
                    android:paddingTop="@dimen/margin_16dp"
                    android:text="@string/remove_ads"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_check_24"
                    android:drawablePadding="@dimen/margin_12dp"
                    android:paddingTop="@dimen/margin_16dp"
                    android:text="최대 2000자 까지 검사 가능"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tv_payment_policy">

            <LinearLayout
                android:id="@+id/ll_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_price_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_rounded_white"
                    android:gravity="center"
                    android:padding="@dimen/margin_8dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Weekly\n￦8,900" />

                <TextView
                    android:id="@+id/tv_price_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_rounded_white"
                    android:gravity="center"
                    android:padding="@dimen/margin_8dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Monthly\n￦18,000" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp">

                <com.dave.spellchecker.ui.view.ShimmerBackgroundView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="8dp"
                    app:shimmerColors="@array/shimmer_colors" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_16dp"
                    android:paddingBottom="@dimen/margin_16dp"
                    app:cornerRadius="8dp"
                    app:shimmerColors="@array/shimmer_colors">

                    <TextView
                        android:id="@+id/tv_period"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="@string/yearly" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="￦59,000" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_payment_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_32dp"
            android:paddingEnd="@dimen/margin_32dp"
            android:paddingBottom="@dimen/margin_8dp"
            android:text="@string/subscription_info"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- 로딩 레이아웃 -->
        <FrameLayout
            android:id="@+id/loadingOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DD000000"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading.json"
                app:lottie_loop="true" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

